[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
    "testing/integration",
    "testing/calibration",
    "ipld/*",
    "testing/integration/tests/*-actor",
    "testing/calibration/contract/*-actor",
    "testing/integration/tests/verify"
]

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true
